[package]
name = "bevy_replicon_repair"
description = "Extends bevy_replicon with client-state repair for reconnects."
authors = ["koe <ukoe@protonmail.com>"]
version = "0.5.0"
edition = "2021"
keywords = ["bevy", "networking", "bevy_replicon"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_replicon_repair"
include = ["/src", "/tests", "/LICENSE*"]

[lib]
test = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy          = { version = "0.12", default-features = false }
bevy_kot_ecs  = { version = "0.11" }
bevy_replicon = { version = "0.21" }
bincode       = { version = "1.3" }
serde         = { version = "1.0" }
tracing       = { version = "0.1" }

[dev-dependencies]
bevy_renet         = { version = "0.0.10", features = ["serde"] }
tracing-subscriber = { version = "0.3" }
